fix overflow background color

--- a/src/components/culture/culture.scss
+++ b/src/components/culture/culture.scss
@@ -49,6 +49,9 @@
         @include phone {
             margin-top: 85px;
         }
+        .video-react-poster {
+            background-color: #1e1e1e;
+        }
     }
     .culture-work-as-team {
         margin-top: 234px;
